fix host align

--- a/src/components/Host/_Host.scss
+++ b/src/components/Host/_Host.scss
@@ -1,7 +1,7 @@
 .host-comp {
 	display: flex;
 	width: 100%;
-	justify-content: space-between;
+	justify-content: flex-end;
 	align-items: center;
 }
 
